# fun

./: .gitignore  README.md  autogen.sh  config.h.in  configure.ac  fun-c-srcs.mk
include/: fun_bad.h  fun_error.h  fun_il.h  fun_io.h  fun_log.h  fun_options.h  fun_string.h
src/: Makefile.am  fun.c  fun_error.c  fun_il.c  fun_io.c  fun_log.c  fun_options.c  fun_string.c
